--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,3 +67,13 @@ add_subdirectory(src)
 # The test configuration is inside the test directory.
 include(CTest)
 add_subdirectory(test)
+
+add_library(can2040 /home/stephen/Desktop/5785/2024-Lab8-Chase-Stephen/lib/can/src/can2040.c)
+target_include_directories(can2040 PUBLIC /home/stephen/Desktop/5785/2024-Lab8-Chase-Stephen/lib/can/src)
+target_link_libraries(can2040 PRIVATE
+  cmsis_core
+  hardware_structs
+  pico_stdlib
+)
+
+
