--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,9 @@
 	path = lib/unity
 	url = git@github.com:ThrowTheSwitch/Unity.git
     ignore = dirty
+[submodule "lib/unity"]
+	path = lib/unity
+	url = https://github.com/ThrowTheSwitch/Unity.git
+[submodule "lib/can"]
+	path = lib/can
+	url = https://github.com/uofu-emb/can2040
