--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(hello_freertos PRIVATE
   pico_multicore
   pico_async_context_freertos
   FreeRTOS-Kernel-Heap4
+  can2040
 )
 
 # The CYW43 is the Wifi/Bluetooth module. If the board is set to pico_w, this
